--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -11,7 +11,7 @@
     <main>
       <div class="container">
         <h1>Body Mass Index(BMI)Calculator</h1>
-        <b>Height (cm):</b>
+        <b>Your Height (cm):</b>
         <input
           type="number"
           class="input"
