--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -18,7 +18,7 @@
           id="height"
           placeholder="Enter Your Height In cm"
         />
-        Your Weight (kg):
+        <b>Your Weight (kg):</b>
         <input
           type="number"
           class="input"
