--- a/Loan Calculator/index.html
+++ b/Loan Calculator/index.html
@@ -14,6 +14,7 @@
         <p>
           Loan Amount $
           <input
+            onchange="calculatePayment()"
             type="number"
             id="loan-amount"
             min="1"
@@ -24,6 +25,7 @@
         <p>
           Interest Rate %
           <input
+            onchange="calculatePayment()"
             type="number"
             id="interest-rate"
             min="0"
@@ -35,6 +37,7 @@
         <p>
           Months to Pay
           <input
+            onchange="calculatePayment()"
             type="number"
             id="months-to-pay"
             min="6"
