--- a/Weight Converter/index.html
+++ b/Weight Converter/index.html
@@ -7,5 +7,22 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="container">
+        <h1>Weight Converter</h1>
+        <div class="input-container">
+          <label for="pounds">Pounds:</label>
+          <input
+            type="number"
+            id="input"
+            step="0.1"
+            placeholder="Enter weight in pounds..."
+          />
+        </div>
+        <p>Your Weight in Kg is: <span class="result"></span></p>
+        <p class="error" id="error"></p>
+      </div>
+    </main>
+  </body>
 </html>
