--- a/Weight Converter/index.html
+++ b/Weight Converter/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weight Converter</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <main>
@@ -20,7 +20,7 @@
             placeholder="Enter weight in pounds..."
           />
         </div>
-        <p>Your Weight in Kg is: <span class="result"></span></p>
+        <p>Your Weight in Kg is: <span id="result"></span></p>
         <p class="error" id="error"></p>
       </div>
     </main>
