--- a/Rotating Image Gallery/index.html
+++ b/Rotating Image Gallery/index.html
@@ -31,6 +31,9 @@
         <span style="--i: 7">
           <img src="https://picsum.photos/id/234/300/200" alt="random image" />
         </span>
+        <span style="--i: 8">
+          <img src="https://picsum.photos/id/238/300/200" alt="random image" />
+        </span>
       </div>
       <div class="btn-container">
         <button id="prev" class="btn">Prev</button>
