--- a/Recipe Book App/index.html
+++ b/Recipe Book App/index.html
@@ -14,37 +14,40 @@
     <div class="container">
       <ul id="recipe-list" class="recipe-list">
         <li class="recipe-item">
-          <img src="https://spoonacular.com/recipeImages/12345-312x231.jpg" alt="Recipe 1"/>
+          <img
+            src="https://spoonacular.com/recipeImages/12345-312x231.jpg"
+            alt="Recipe 1"
+          />
           <h2>Recipe 1</h2>
           <p>
             <strong>Ingredients:</strong>
-            Ingredient 1,
-            Ingredient 2,
-            Ingredient 3
+            Ingredient 1, Ingredient 2, Ingredient 3
           </p>
-          <a href="#">View Recipe</a>
+          <a href="#" target="_blank">View Recipe</a>
         </li>
         <li class="recipe-item">
-          <img src="https://spoonacular.com/recipeImages/12545-312x231.jpg" alt="Recipe 2"/>
+          <img
+            src="https://spoonacular.com/recipeImages/12545-312x231.jpg"
+            alt="Recipe 2"
+          />
           <h2>Recipe 2</h2>
           <p>
             <strong>Ingredients:</strong>
-            Ingredient 1,
-            Ingredient 2,
-            Ingredient 3
+            Ingredient 1, Ingredient 2, Ingredient 3
           </p>
-          <a href="#">View Recipe</a>
+          <a href="#" target="_blank">View Recipe</a>
         </li>
         <li class="recipe-item">
-          <img src="https://spoonacular.com/recipeImages/12445-312x231.jpg" alt="Recipe 3"/>
+          <img
+            src="https://spoonacular.com/recipeImages/12445-312x231.jpg"
+            alt="Recipe 3"
+          />
           <h2>Recipe 3</h2>
           <p>
             <strong>Ingredients:</strong>
-            Ingredient 1,
-            Ingredient 2,
-            Ingredient 3
+            Ingredient 1, Ingredient 2, Ingredient 3
           </p>
-          <a href="#">View Recipe</a>
+          <a href="#" target="_blank">View Recipe</a>
         </li>
       </ul>
     </div>
