--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Age Calculator</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Age Calculator</h1>
-    <div class="form">
-      <label for="birthday">Enter your date of birth</label>
-      <input type="date" name="birthday" id="birthday">
-      <button id="btn">Calculate Age</button>
-      <p id="result">Your age is </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Age Calculator</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script defer src="script.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="calculator">
+        <h1>
+          JavaScript<br />
+          <span>Age Calculator</span>
+        </h1>
+        <div class="input-box">
+          <input type="date" id="date" />
+          <button onclick="calculateAge()">Calculate</button>
+        </div>
+        <p id="result"></p>
+      </div>
     </div>
-  </div>
-  <script src="script.js"></script>
-</body>
+  </body>
 </html>
