--- a/Speed Typing Game/index.html
+++ b/Speed Typing Game/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <div class="timer" id="timer">0</div>
+      <div class="timer" id="timer"></div>
       <div class="container">
         <div class="quote" id="quote"></div>
         <textarea class="input" id="input" autofocus></textarea>
