--- a/Password Strength Meter/index.html
+++ b/Password Strength Meter/index.html
@@ -7,5 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Password Strength Test</h1>
+      <div class="strength-meter"></div>
+      <input
+        class="password"
+        id="password"
+        placeholder="password"
+        type="text"
+        autofocus
+        aria-labelledby="password"
+      />
+      <div class="suggestions" id="suggestions"></div>
+    </div>
+  </body>
 </html>
