--- a/Password Strength Meter/index.html
+++ b/Password Strength Meter/index.html
@@ -10,11 +10,11 @@
   <body>
     <div class="container">
       <h1>Password Strength Test</h1>
-      <div class="strength-meter"></div>
+      <div class="strength-meter" id="strength-meter"></div>
       <input
         class="password"
-        id="password"
-        placeholder="password"
+        id="password-input"
+        placeholder="Enter a password"
         type="text"
         autofocus
         aria-labelledby="password"
