--- a/tesla-configurator-vanilla-js-main/index.html
+++ b/tesla-configurator-vanilla-js-main/index.html
@@ -12,8 +12,23 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Design Your Tesla Model Y Landing Page</title>
+    <title>Design Your Tesla Model Y</title>
     <script src="./js/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Top Bar -->
+    <div id="top-bar" class="bg-gray-100 fixed top-0 right-0 left-0 py-2">
+      <p class="text-center py-2 font-semibold">
+        0% APR available for qualified buyers
+      </p>
+    </div>
+
+    <!-- Header Section -->
+    <header class="flex justify-between items-center px-10 py-6 mt-16">
+      <img src="./images/logo.svg" alt="Tesla logo" width="120" height="24" />
+      <button>
+        <i class="fa-solid fa-globe"> <span class="font-bold">US</span></i>
+      </button>
+    </header>
+  </body>
 </html>
