--- a/tesla-configurator-vanilla-js-main/index.html
+++ b/tesla-configurator-vanilla-js-main/index.html
@@ -30,5 +30,29 @@
         <i class="fa-solid fa-globe"> <span class="font-bold">US</span></i>
       </button>
     </header>
+
+    <!-- Main Content Section -->
+    <main class="flex flex-col md:flex-row justify-between px-4 md:px-10 py-6">
+      <!-- Image Section -->
+      <section class="w-full md:w-3/4">
+        <div class="sticky top-24">
+          <!-- Exterior Image -->
+          <div
+            class="h96 bg-gray-200 flex items-center justify-center overflow-hidden mb-4"
+          >
+            <img
+              src="./images/model-y-stealth-grey.jpg"
+              alt="Model Y stealth gray image"
+              class="max-w-full h-auto transform scale-125"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- Sidebar -->
+      <aside class="w-full md:w-1/3 pl-0 md:pl-8 mt-6 md:mt-0 z-2">
+        Sidebar
+      </aside>
+    </main>
   </body>
 </html>
