fix class naming

--- a/Character Counter/index.html
+++ b/Character Counter/index.html
@@ -23,7 +23,7 @@
         </p>
         <p>
           Remaining:
-          <span class="Remaining-characters" id="Remaining-characters"
+          <span class="remaining-characters" id="remaining-characters"
             >120</span
           >
         </p>
