--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -14,17 +14,17 @@
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
-          <small>Error message</small>
+          <small></small>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
           <input type="text" id="email" placeholder="Enter email" />
-          <small>Error message</small>
+          <small></small>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" id="password" placeholder="Enter password" />
-          <small>Error message</small>
+          <small></small>
         </div>
         <div class="form-group">
           <label for="Password-confirmation">Confirm Password</label>
@@ -33,7 +33,7 @@
             id="Password-confirmation"
             placeholder="Enter Password Again"
           />
-          <small>Error message</small>
+          <small></small>
         </div>
         <button type="submit">Register</button>
       </from>
