--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <from id="from" class="form">
+      <form id="form" class="form">
         <h1>Register With Us</h1>
         <div class="form-group">
           <label for="username">Username</label>
@@ -27,16 +27,16 @@
           <small></small>
         </div>
         <div class="form-group">
-          <label for="Password-confirmation">Confirm Password</label>
+          <label for="password-confirmation">Confirm Password</label>
           <input
             type="password"
-            id="Password-confirmation"
-            placeholder="Enter Password Again"
+            id="password-confirmation"
+            placeholder="Enter password Again"
           />
           <small></small>
         </div>
         <button type="submit">Register</button>
-      </from>
+      </form>
     </div>
   </body>
 </html>
