--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -35,7 +35,7 @@
           />
           <small></small>
         </div>
-        <button type="submit">Register</button>
+        <button type="submit" class="register-button">Register</button>
       </form>
     </div>
   </body>
