--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -3,23 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A modern, accessible Age Calculator built with HTML, CSS, and JavaScript." />
     <title>Age Calculator</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="calculator">
-        <h1>
+      <main class="calculator" aria-labelledby="main-title">
+        <div class="top-actions">
+          <button type="button" id="reset-btn" title="Reset form">Reset</button>
+          <button type="button" id="theme-toggle" title="Toggle dark mode" aria-pressed="false">🌙</button>
+        </div>
+        <h1 id="main-title">
           JavaScript<br />
           <span>Age Calculator</span>
         </h1>
-        <div class="input-box">
-          <input type="date" id="date" />
-          <button onclick="calculateAge()">Calculate</button>
-        </div>
-        <p id="result"></p>
-      </div>
+        <form class="input-box" id="age-form" autocomplete="off">
+          <label for="date" class="visually-hidden">Enter your birth date</label>
+          <input type="date" id="date" aria-label="Enter your birth date" required />
+          <button type="submit" id="calc-btn">Calculate</button>
+        </form>
+        <p id="result" role="status" aria-live="polite"></p>
+        <button type="button" id="copy-btn" style="display:none;">Copy Result</button>
+      </main>
     </div>
   </body>
 </html>
