--- a/Basic-Calculator/index.html
+++ b/Basic-Calculator/index.html
@@ -8,21 +8,21 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="calculator">
-      <input type="text" id="result" readonly />
+    <div class="calculator animated-card" aria-label="Calculator">
+      <input type="text" id="result" readonly aria-label="Calculation result" />
       <div class="buttons">
-        <button class="clear">C</button>
-        <button class="operator">/</button>
-        <button class="operator">*</button>
-        <button class="operator">-</button>
+        <button class="clear" aria-label="Clear">C</button>
+        <button class="operator" aria-label="Divide">/</button>
+        <button class="operator" aria-label="Multiply">*</button>
+        <button class="operator" aria-label="Subtract">-</button>
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="operator">+</button>
+        <button class="operator" aria-label="Add">+</button>
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="equals">=</button>
+        <button class="equals" aria-label="Equals">=</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
