--- a/Loan Calculator/index.html
+++ b/Loan Calculator/index.html
@@ -1,52 +1,330 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loan Calculator</title>
+    <title>Advanced Loan Calculator</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <!-- Chart.js for payment visualization -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <header>
+      <div class="theme-toggle">
+        <input type="checkbox" id="theme-toggle-checkbox" />
+        <label for="theme-toggle-checkbox">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <span class="toggle-ball"></span>
+        </label>
+      </div>
+    </header>
+
     <main>
       <div class="container">
-        <h1>Loan Calculator</h1>
-        <p>
-          Loan Amount $
-          <input
-            onchange="calculateLoan()"
-            type="number"
-            id="loan-amount"
-            min="1"
-            max="1000000"
-            placeholder="Enter Loan Amount"
-          />
-        </p>
-        <p>
-          Interest Rate %
-          <input
-            onchange="calculateLoan()"
-            type="number"
-            id="interest-rate"
-            min="0"
-            max="100"
-            placeholder="Enter Interest Rate"
-            step="0.1"
-          />
-        </p>
-        <p>
-          Months to Pay
-          <input
-            onchange="calculateLoan()"
-            type="number"
-            id="months-to-pay"
-            min="6"
-            max="48"
-            placeholder="Number of months to pay"
-          />
-        </p>
-        <p class="payment" id="monthly-payment">Monthly Payment:</p>
+        <div class="app-header">
+          <h1>Loan Calculator <i class="fas fa-calculator"></i></h1>
+          <div class="loan-type-selector">
+            <button class="loan-type-btn active" data-type="personal">
+              Personal
+            </button>
+            <button class="loan-type-btn" data-type="auto">Auto</button>
+            <button class="loan-type-btn" data-type="mortgage">Mortgage</button>
+          </div>
+        </div>
+
+        <div class="calculator-grid">
+          <!-- Calculation Form Section -->
+          <div class="calculator-form">
+            <form id="loan-form">
+              <div class="form-group">
+                <label for="loan-amount">Loan Amount ($)</label>
+                <div class="input-with-icon">
+                  <i class="fas fa-dollar-sign icon"></i>
+                  <input
+                    type="number"
+                    id="loan-amount"
+                    min="1"
+                    max="1000000"
+                    value="10000"
+                    placeholder="Enter Loan Amount"
+                  />
+                </div>
+                <div class="slider-container">
+                  <input
+                    type="range"
+                    id="loan-amount-slider"
+                    min="1000"
+                    max="100000"
+                    step="1000"
+                    value="10000"
+                  />
+                  <div class="slider-labels">
+                    <span>$1,000</span>
+                    <span>$100,000</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="interest-rate">Interest Rate (% APR)</label>
+                <div class="input-with-icon">
+                  <i class="fas fa-percentage icon"></i>
+                  <input
+                    type="number"
+                    id="interest-rate"
+                    min="0.1"
+                    max="30"
+                    step="0.1"
+                    value="5.0"
+                    placeholder="Enter Interest Rate"
+                  />
+                </div>
+                <div class="slider-container">
+                  <input
+                    type="range"
+                    id="interest-rate-slider"
+                    min="0.1"
+                    max="30"
+                    step="0.1"
+                    value="5.0"
+                  />
+                  <div class="slider-labels">
+                    <span>0.1%</span>
+                    <span>30%</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="loan-term">Loan Term</label>
+                <div class="term-selector">
+                  <div class="input-with-icon">
+                    <i class="fas fa-calendar-alt icon"></i>
+                    <input
+                      type="number"
+                      id="loan-term"
+                      min="1"
+                      max="30"
+                      value="5"
+                      placeholder="Term Length"
+                    />
+                  </div>
+                  <div class="term-type-selector">
+                    <button
+                      type="button"
+                      class="term-btn active"
+                      data-term="years"
+                    >
+                      Years
+                    </button>
+                    <button type="button" class="term-btn" data-term="months">
+                      Months
+                    </button>
+                  </div>
+                </div>
+                <div class="slider-container">
+                  <input
+                    type="range"
+                    id="loan-term-slider"
+                    min="1"
+                    max="30"
+                    value="5"
+                  />
+                  <div class="slider-labels">
+                    <span>1 Year</span>
+                    <span>30 Years</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="payment-frequency">Payment Frequency</label>
+                <div class="select-wrapper">
+                  <select id="payment-frequency">
+                    <option value="monthly" selected>Monthly</option>
+                    <option value="bi-weekly">Bi-weekly</option>
+                    <option value="weekly">Weekly</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="calculate-btn-container">
+                <button type="button" id="calculate-btn">Calculate Loan</button>
+                <button type="button" id="reset-btn">Reset</button>
+              </div>
+            </form>
+          </div>
+
+          <!-- Results Section -->
+          <div class="results-section">
+            <div class="results-card" id="loan-summary">
+              <h2>Loan Summary</h2>
+              <div class="results-grid">
+                <div class="result-item">
+                  <span class="result-label">Monthly Payment</span>
+                  <span class="result-value" id="monthly-payment">$0.00</span>
+                </div>
+                <div class="result-item">
+                  <span class="result-label">Total Payment</span>
+                  <span class="result-value" id="total-payment">$0.00</span>
+                </div>
+                <div class="result-item">
+                  <span class="result-label">Total Interest</span>
+                  <span class="result-value" id="total-interest">$0.00</span>
+                </div>
+              </div>
+
+              <!-- Pie chart for payment breakdown -->
+              <div class="chart-container">
+                <canvas id="payment-chart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Amortization Schedule Section -->
+        <div class="amortization-section">
+          <h2>Amortization Schedule</h2>
+          <div class="table-container">
+            <table id="amortization-table">
+              <thead>
+                <tr>
+                  <th>Payment #</th>
+                  <th>Payment Date</th>
+                  <th>Payment Amount</th>
+                  <th>Principal</th>
+                  <th>Interest</th>
+                  <th>Remaining Balance</th>
+                </tr>
+              </thead>
+              <tbody id="amortization-body">
+                <!-- Will be populated by JavaScript -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <!-- Advanced Options Section -->
+        <div class="advanced-options">
+          <div class="advanced-toggle">
+            <h2>Advanced Options <i class="fas fa-caret-down"></i></h2>
+          </div>
+          <div class="advanced-content hidden">
+            <div class="advanced-grid">
+              <div class="form-group">
+                <label for="down-payment">Down Payment ($)</label>
+                <div class="input-with-icon">
+                  <i class="fas fa-dollar-sign icon"></i>
+                  <input
+                    type="number"
+                    id="down-payment"
+                    min="0"
+                    value="0"
+                    placeholder="Down Payment"
+                  />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="additional-payment"
+                  >Additional Monthly Payment ($)</label
+                >
+                <div class="input-with-icon">
+                  <i class="fas fa-dollar-sign icon"></i>
+                  <input
+                    type="number"
+                    id="additional-payment"
+                    min="0"
+                    value="0"
+                    placeholder="Extra Payment"
+                  />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="start-date">Start Date</label>
+                <div class="input-with-icon">
+                  <i class="fas fa-calendar-alt icon"></i>
+                  <input type="date" id="start-date" />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="tax-insurance">Monthly Tax & Insurance ($)</label>
+                <div class="input-with-icon">
+                  <i class="fas fa-dollar-sign icon"></i>
+                  <input
+                    type="number"
+                    id="tax-insurance"
+                    min="0"
+                    value="0"
+                    placeholder="Tax & Insurance"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Loan Comparison Section -->
+        <div class="comparison-section">
+          <div class="comparison-toggle">
+            <h2>Loan Comparison <i class="fas fa-caret-down"></i></h2>
+          </div>
+          <div class="comparison-content hidden">
+            <div class="comparison-container">
+              <div class="comparison-controls">
+                <button type="button" id="add-scenario-btn">
+                  Add Scenario
+                </button>
+              </div>
+              <div class="scenario-cards" id="scenario-container">
+                <!-- Will be populated by JavaScript -->
+              </div>
+              <div class="comparison-chart-container">
+                <canvas id="comparison-chart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Action Buttons -->
+        <div class="action-buttons">
+          <button type="button" id="save-btn">
+            <i class="fas fa-save"></i> Save Results
+          </button>
+          <button type="button" id="print-btn">
+            <i class="fas fa-print"></i> Print
+          </button>
+          <button type="button" id="export-btn">
+            <i class="fas fa-file-export"></i> Export to PDF
+          </button>
+        </div>
       </div>
     </main>
+
+    <footer>
+      <div class="footer-content">
+        <p>Advanced Loan Calculator &copy; <span id="current-year"></span></p>
+        <p>
+          Disclaimer: This calculator provides estimates only and should not be
+          considered financial advice.
+        </p>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
