--- a/Loan Calculator/index.html
+++ b/Loan Calculator/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -324,7 +325,6 @@
         </p>
       </div>
     </footer>
-
-    <script src="script.js"></script>
+    
   </body>
 </html>
